tried icon changes

--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -16,7 +16,7 @@
         <ul class="nav">
           <li class="active ">
             <a href="/">
-              <i class="tim-icons icon-chart-pie-36"></i>
+              <i class="tim-icons icon-atom"></i>
               <p>Dashboard</p>
             </a>
           </li>
