--- a/core/templates/ui-notifications.html
+++ b/core/templates/ui-notifications.html
@@ -23,6 +23,8 @@
           </button>
           <span>This is a notification with close button.</span>
         </div>
+
+
         <div class="alert alert-info alert-with-icon" data-notify="container">
           <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
             <i class="tim-icons icon-simple-remove"></i>
@@ -30,6 +32,16 @@
           <span data-notify="icon" class="tim-icons icon-bell-55"></span>
           <span data-notify="message">This is a notification with close button and icon.</span>
         </div>
+
+        <div class="alert alert-info alert-with-icon" data-notify="container">
+          <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
+            <i class="tim-icons icon-simple-remove"></i>
+          </button>
+          <span data-notify="icon" class="tim-icons icon-bell-55"></span>
+          <span data-notify="message">This is a notification with close button and icon222.</span>
+        </div>
+
+
         <div class="alert alert-info alert-with-icon" data-notify="container">
           <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
             <i class="tim-icons icon-simple-remove"></i>
